-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
[49969.341948] LustreError: 7659:0:(recover.c:116:ptlrpc_replay_next()) ASSERTION( !list_empty(imp->imp_replay_cursor) ) failed:
[49969.348935] LustreError: 7659:0:(recover.c:116:ptlrpc_replay_next()) LBUG
[49969.351957] Pid: 7659, comm: ptlrpcd_rcv
[49969.351957]
Call Trace:
[49969.352018] [<ffffffffa02f4853>] libcfs_debug_dumpstack+0x53/0x80 [libcfs]
[49969.352025] [<ffffffffa02f4f95>] lbug_with_loc+0x45/0xc0 [libcfs]
[49969.352197] [<ffffffffa067a6d5>] ptlrpc_replay_next+0x415/0x450 [ptlrpc]
[49969.352238] [<ffffffffa069e792>] ptlrpc_import_recovery_state_machine+0x1d2/0xbb0 [ptlrpc]
[49969.352262] [<ffffffffa066e910>] ptlrpc_replay_interpret+0x160/0x5d0 [ptlrpc]
[49969.352284] [<ffffffffa0676638>] ptlrpc_check_set.part.25+0x2e8/0x1c50 [ptlrpc]
[49969.352303] [<ffffffffa0677ffb>] ptlrpc_check_set+0x5b/0xe0 [ptlrpc]
[49969.352328] [<ffffffffa06a4b1b>] ptlrpcd_check+0x4eb/0x730 [ptlrpc]
[49969.352349] [<ffffffffa06a5032>] ptlrpcd+0x2d2/0x530 [ptlrpc]
[49969.352353] [<ffffffff810b8940>] ? default_wake_function+0x0/0x20
[49969.352373] [<ffffffffa06a4d60>] ? ptlrpcd+0x0/0x530 [ptlrpc]
[49969.352376] [<ffffffff810a5b8f>] kthread+0xcf/0xe0
[49969.352378] [<ffffffff810a5ac0>] ? kthread+0x0/0xe0
[49969.352381] [<ffffffff81646a98>] ret_from_fork+0x58/0x90
[49969.352383] [<ffffffff810a5ac0>] ? kthread+0x0/0xe0
[49969.352384]
[49969.352386] Kernel panic - not syncing: LBUG